# scrapbox4

./: .gitignore  README.md
hs_sample/: README.md
hs_sample/sample-functions/: ChangeLog.md  README.md  package.yaml  sample-functions.cabal
hs_sample/sample-haskell/: ChangeLog.md  README.md  package.yaml  sample-haskell.cabal
hs_sample/sample-helloworld/: ChangeLog.md  README.md  package.yaml  sample-helloworld.cabal
hs_sample/sample-quicksort/: ChangeLog.md  README.md  (+2 more)
ir_sample/: README.md
java_sample/: README.md
kt_sample/: README.md
ml_sample/: README.md
ml_sample/sample_pyltr/: README.md  pyproject.toml
ml_sample/sample_pyltr/sample_pyltr/: main.py
ml_sample/sample_pyltr/tests/: test_sample_pyltr.py
nlp_sample/sample_budoux/: README.md  pyproject.toml
nlp_sample/sample_budoux/sample_budoux/: main.py
nlp_sample/sample_budoux/tests/: test_sample_budoux.py
ops_sample/: README.md
py_sample/: README.md
py_sample/api_batch_template/: Dockerfile  README.md  docker-compose.api.yml  docker-compose.batch.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
py_sample/api_batch_template/src/api/: main.py
py_sample/api_batch_template/src/api/module/: __init__.py
py_sample/api_batch_template/src/batch/: main.py
py_sample/api_batch_template/src/batch/module/: __init__.py  calc.py
py_sample/api_batch_template/src/tests/api/module/: test_calc.py
py_sample/api_batch_template/src/tests/batch/module/: test_calc.py
py_sample/sample_poetry_docker/: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
py_sample/sample_poetry_docker/sample_poetry_docker/: module.py
py_sample/sample_poetry_docker/tests/: test_sample_poetry_docker.py
py_sample/sample_poetry_docker_with_build/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
py_sample/sample_poetry_docker_with_build/sample_poetry_docker_with_build/: main.py
py_sample/sample_poetry_docker_with_build/tests/: test_module.py  test_sample_poetry_docker.py
(+740 files in other folders)
