[tool.poetry]
name = "sample_pyltr"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^0.29.24"
scikit-learn = "0.23.2"
pyltr = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
