[tool.poetry]
name = "sample_budoux"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
budoux = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
